--- a/src/styles/components/_game-header.scss
+++ b/src/styles/components/_game-header.scss
@@ -1,7 +1,7 @@
 @use './../abstracts/' as *;
 
 #header{
-  padding: 4%;
+  padding: 2%;
   &:has(.game__header--code){
     background-color: #303131;
   }
